Ajustes de coerência

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h1 class="display-5 fw-bold mb-4">Apoiamos a juventude negra na universidade!</h1>
                     <p class="lead mb-4">Porque o acesso à educação é essencial para construir uma sociedade
                         verdadeiramente equitativa e racialmente justa.</p>
-                    <a href="#" class="btn" style="background-color: white; color: #5a3201;">DOE AGORA</a>
+                    <a href="#" class="btn" style="background-color: white; color: #5a3201;">SAIBA MAIS</a>
                 </div>
                 <div class="col-lg-6 text-center">
                     <img src="images\carambaia-motion-orange.png" alt="Carambaia Decoration"
@@ -92,12 +92,11 @@
                                         </div>
                                         <div class="project-content">
                                             <h3 class="project-title">CineCarambaia</h3>
-                                            <p class="mb-3">Com objetivo de arrecadar fundos para a instituição
-                                                Carambaia, temos como objetivo prototipar um projeto social direcionado
-                                                e viável. Através de uma parceria com cinema que a gente decide depois,
-                                                que não só será uma experiência cultural que trará a magia
-                                                cinematográfica para muitos, também irá divulgar o instituto Carambaia
-                                                juntamente com potenciais doações.</p>
+                                            <p class="mb-3">Com a finalidade de arrecadação de fundos para a Instituição Carambaia,
+                                            fizemos a montagem de um projeto social direcionado e viável. Através de
+                                            uma parceria com o Espaço Cultural Latino Americano (ECLA), será realizada uma experiência
+                                            que não é apenas cultural, mas também mística, trazendo a magia cinematográfica para a audiência,
+                                            enquanto o nome do Instituto Carambaia é divulgado simultaneamente para incentivar doações.</p>
                                             <div class="mt-3">
                                                 <span class="badge bg-warning text-dark me-2">Arrecadação de
                                                     Fundos</span>
@@ -203,7 +202,7 @@
                     <p class="mb-4">Com seu apoio, podemos continuar oferecendo bolsas de permanência e desenvolvendo
                         projetos como o CineCarambaia que fortalecem nossa comunidade e arrecadam fundos para nossa
                         causa principal.</p>
-                    <a href="#" class="btn btn-light-custom">FAZER UMA DOAÇÃO</a>
+                    <a href="https://institutocarambaia.paradoar.org/" class="btn btn-light-custom" target="_blank">FAZER UMA DOAÇÃO</a>
                 </div>
                 <div class="col-lg-4 text-center">
                     <div><img src="images\carambaia-motion-white.png" alt="Carambaia Decoration"
